Working on A5 (max binary heaps + patient system)